# ipa2tipa

./: .gitignore  LICENSE.md  README.md  ipa2tipa.py  ipa2tipa_test.py  mappings.py  phonetic_types.py  tipa2ipa.py  uni2tipa-supsub.csv  uni2tipa0.csv  uni2tipa1.csv
.github/workflows/: gh-pages.yml
docs/: index.html  style.css
py/: data.py  gen_data.py  ipa2tipa.py  ipa2tipa_test.py  tipa2ipa.py
py/ipa2tipa/: __init__.py  data.py  ipa2tipa.py  tipa2ipa.py  typedefs.py
rs/: Cargo.toml  Dioxus.toml
rs/src/: main.rs
uni2tipa/: uni2tipa-rtone.tsv  uni2tipa-supsub.tsv  uni2tipa-tone.csv  uni2tipa-tone.tsv  uni2tipa0.csv  uni2tipa0.tsv  uni2tipa1.csv  uni2tipa1.tsv  uni2tipa2.csv  uni2tipa2.tsv
