[package]
name = "ipa2tipa"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.5", features = ["web"] }
unicode-normalization = "0.1"
lazy_static = "1.4"
wasm-logger = "0.2"
log = "0.4"
# Pin versions to match Dioxus CLI 0.5.7 built-in wasm-bindgen (0.2.93)
# To avoid version mismatch error during dx serve/build
wasm-bindgen = "=0.2.93"
web-sys = "=0.3.70"
js-sys = "=0.3.70"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
